force-app/main/default/objects/Activity/fields/Internal_Notes_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes_Outcome__c</fullName>
    <label>Internal Notes/Outcome</label>
    <type>TextArea</type>
</CustomField>