force-app/main/default/objects/Activity/fields/Objectives_of_BRM__c.field-meta.xml
<CustomField>
    <fullName>Objectives_of_BRM__c</fullName>
    <label>Objectives of BRM</label>
    <type>TextArea</type>
</CustomField>