force-app/main/default/objects/Activity/fields/Outcome_of_BRM__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_BRM__c</fullName>
    <label>Outcome of BRM</label>
    <type>TextArea</type>
</CustomField>